tests/parsing/space_in_indent/stderr.golden
error: space character ' ' not allowed for indent
bus.fbd +2:1
   |
 2 |     width = 1
   | ^
